# restaurant-analytics

./: .env  .env.template  .envrc  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  restaurant entity relations.csv
.github/workflows/: notify-slack-on-pr.yml
dags/: fetch_weather_api.py  fetch_weather_api_dag.py  utils.py
dags/dbt_weather/: fetch_weather_api.py
restaurant_data/: upload_to_gcs.py
restaurant_dbt/: .user.yml  dbt_project.yml  profiles.yml
restaurant_dbt/models/: sources.yml
restaurant_dbt/models/restaurant_tables_golden/: schema.yml  tb_sales_final.sql  tb_sales_per_weather.sql
restaurant_dbt/models/restaurant_tables_silver/: schema.yml  tb_item_categories.sql  tb_sales.sql  tb_waiter.sql
restaurant_dbt/models/source/: src_restaurant_tables.yml
scripts/: entrypoint.sh
